--- a/開発用/src/assets/sass/global/_variables.scss
+++ b/開発用/src/assets/sass/global/_variables.scss
@@ -5,12 +5,14 @@ $bg-sub-color:#2D2D32;
 $accent-color:#F9F9F9;
 $link-color:#000000;
 $text-color:#EDECFC;
-
+$c-search-btn-color: linear-gradient(180deg, #007ADF 0%, rgba(2, 200, 160, 0.79) 139.64%, rgba(0, 236, 188, 0.48) 194.29%);
+$white-color: #ffffff;
 
 /////////フォント/////////
 $main-font:'Noto Sans JP', sans-serif;
 $en-font:'Lato', sans-serif;
 $label-font:'Hind', sans-serif;
+$text-font: 'Zen Kaku Gothic New', sans-serif;
 $fz-base: 16px;
 $fw-base: 400;
 
