--- a/開発用/src/assets/sass/component/_c-search-btn.scss
+++ b/開発用/src/assets/sass/component/_c-search-btn.scss
@@ -1,2 +1,22 @@
 @use "../global" as global;
 
+.c-search-btn{
+    display: inline-block;
+    width: 125px;
+    height: 280px;
+    background: global.$c-search-btn-color;
+    position: fixed;
+    right: 0;
+    top: 430px;
+}
+
+.c-search-btn__link{
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 100%;
+    writing-mode: vertical-rl;
+    font-size: 24px;
+    color: global.$white-color;
+    font-family: global.$text-font;
+}
