--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -2,7 +2,7 @@ body {
 	background-color: #000;
 }
 
-.c-search-btn {
+.c-searchBtn {
 	background: linear-gradient(180deg, #007ADF 0%, rgba(2, 200, 160, 0.79) 139.64%, rgba(0, 236, 188, 0.48) 194.29%);
 	display: inline-block;
 	height: 280px;
@@ -12,7 +12,7 @@ body {
 	width: 125px;
 }
 
-.c-search-btn__link {
+.c-searchBtn__link {
 	color: #ffffff;
 	display: grid;
 	font-family: "Zen Kaku Gothic New", sans-serif;
