--- a/開発用/src/assets/sass/project/_spend.scss
+++ b/開発用/src/assets/sass/project/_spend.scss
@@ -1,11 +1,14 @@
 @use "../global" as global;
 
 .p-spend-message {
-
+    font-size: 15px;
+    text-align: center;
+    line-height: calc( 34.545 / 15 );
+    letter-spacing: 1.95px;
 }
 
 .p-spend-message__text {
-
+    
 }
 
 .p-spend-tour {
