インナー幅の変数追加しました。

--- a/開発用/src/assets/sass/global/_variables.scss
+++ b/開発用/src/assets/sass/global/_variables.scss
@@ -3,7 +3,7 @@ $main-color:#64629D;
 $bg-color:#9F9EC1;
 $bg-sub-color:#2D2D32;
 $accent-color:#F9F9F9;
-$accent-color-action:;
+
 $link-color:#000000;
 $text-color:#EDECFC;
 
@@ -15,8 +15,8 @@ $label-font:'Hind', sans-serif;
 $fz-base: 16px;
 $fw-base: 400;
 
-/////レイアウト/////
-$inner-width:83.4%;
+/////インナー幅/////
+$pc-width:83.4%;
 $sp-width:89.3%;
 
 // ブレークポイント
