--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -43,6 +43,7 @@ body h5 {
 	right: 0;
 	top: 430px;
 	width: 125px;
+	z-index: 10;
 }
 
 .c-search-btn__link {
@@ -92,6 +93,10 @@ body h5 {
 	top: 1em;
 }
 
+.spend-wrapper {
+	overflow-x: hidden;
+}
+
 .p-spend-message {
 	font-size: 15px;
 	letter-spacing: 1.95px;
@@ -110,7 +115,6 @@ body h5 {
 	background: url(../img/spend/spend-slide-bg.png) no-repeat center center/cover;
 	display: flex;
 	flex: 1;
-	overflow-x: hidden;
 	padding-bottom: 110px;
 	padding-top: 85px;
 	width: 900%;
@@ -311,12 +315,36 @@ body h5 {
 .p-spend-tour__cards {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	margin-inline: auto;
+	justify-content: center;
 	margin-top: 80px;
+	-moz-column-gap: 40px;
+	column-gap: 40px;
+	row-gap: 110px;
 }
 
 .p-spend-tour__card {
+	margin-inline: auto;
 	max-width: 520px;
+}
+
+.spend-tour__head {
+	font-family: "Shippori Mincho", serif;
+	font-size: 24px;
+	font-weight: 600;
+	line-height: 1.4583333333;
+	margin-top: 20px;
+}
+
+.p-spend-tour__text {
+	font-size: 15px;
+	letter-spacing: 1.8px;
+	line-height: 1.8902;
+	margin-top: 15px;
+}
+
+.p-spend-tour__detail {
+	font-size: 14px;
+	margin-top: 30px;
 }
 
 .p-gnav {
