c-main-message内のテキストに’c-main-message__text’として、CSSを記載しました。

--- a/開発用/src/assets/sass/component/_c-main-message.scss
+++ b/開発用/src/assets/sass/component/_c-main-message.scss
@@ -8,3 +8,8 @@
     padding-top: 120px;
     padding-bottom: 110px;
 }
+
+.c-main-message__text {
+    max-width: 583px;
+    margin-inline: auto;
+}
