--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -101,6 +101,11 @@ body h5 {
 	text-align: center;
 }
 
+.c-main-message__text {
+	margin-inline: auto;
+	max-width: 583px;
+}
+
 .p-spend-message {
 	font-size: 15px;
 	letter-spacing: 1.95px;
