--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -111,6 +111,15 @@ body h5 {
 	overflow-x: hidden;
 }
 
+.border-line {
+	background: #2D2D2E;
+	height: 1px;
+	left: 200px;
+	position: absolute;
+	top: -27px;
+	width: 0;
+}
+
 .p-spend-slide {
 	background: url(../img/spend/spend-slide-bg.png) no-repeat center center/cover;
 	display: flex;
@@ -123,6 +132,22 @@ body h5 {
 .p-spend-slide__wrapper {
 	display: flex;
 	margin-left: 117px;
+}
+
+.p-spend-slide__wrapper li {
+	position: relative;
+}
+
+.p-spend-slide__wrapper li::after {
+	background: #2D2D2E;
+	border-radius: 50%;
+	content: "";
+	height: 20px;
+	left: 200px;
+	position: absolute;
+	top: -37px;
+	transform: translateX(-50%);
+	width: 20px;
 }
 
 .p-spend-slide__block {
