--- a/開発用/src/assets/sass/project/_index.scss
+++ b/開発用/src/assets/sass/project/_index.scss
@@ -1,7 +1,11 @@
 @use "p-logo__wrap";
 @use "p-mv__title";
-@use "p-concept__lead";
-
-
+@use "p-slider";
+@use "p-concept";
+@use "p-concept__wrap";
+@use "p-news";
+@use "p-news__wrap";
+@use "p-concent";
+@use "p-content__wrap";
 @use "spend";
 @use "./p-gnav";
