--- a/開発用/src/assets/sass/layout/_l-header__mv.scss
+++ b/開発用/src/assets/sass/layout/_l-header__mv.scss
@@ -1,8 +1,8 @@
 @use "../global/" as global;
 
-.l-top__mv {
+.l-header__mv{
   position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
