--- a/開発用/src/assets/sass/global/_variables.scss
+++ b/開発用/src/assets/sass/global/_variables.scss
@@ -10,7 +10,9 @@ $c-search-btn-color: linear-gradient(180deg, #007ADF 0%, rgba(2, 200, 160, 0.79)
 $white-color: #ffffff;
 $pagination-color:#D9D9D9;
 $pagination-active-color:#6C6A6A;
-
+$label-color:#CA1818;
+$sub-text-color:#181818;
+$border-bottom-color:#0A0A0A;
 
 
 /////////フォント/////////
