--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -175,6 +175,60 @@ body li {
 	text-align: center;
 }
 
+.c-section__title {
+	color: #2D2D2E;
+	font-family: "Shippori Mincho", serif;
+	font-size: 2rem;
+	font-size: calc(24px + 8 * (100vw - 375px) / 1065);
+	font-weight: 400;
+	letter-spacing: 0.13em;
+	line-height: 2.023125;
+	text-align: center;
+}
+
+.c-news__date {
+	color: #181818;
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	letter-spacing: 0em;
+	line-height: 1.5625;
+}
+
+.c-news__label {
+	color: #CA1818;
+	font-size: 1rem;
+	font-weight: 700;
+	letter-spacing: 0.03em;
+	line-height: 1.448125;
+	padding-left: 23px;
+}
+
+.c-news__item {
+	border-bottom: 1px solid #0A0A0A;
+	display: block;
+	padding-bottom: 15px;
+	transition: opacity 0.3s ease-in-out;
+	width: 100%;
+}
+
+.c-news__item:not(:first-child) {
+	padding-top: 22px;
+}
+
+.c-news__item:hover {
+	opacity: 0.6;
+}
+
+.c-news__content {
+	color: #181818;
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 0.9375rem;
+	font-weight: 400;
+	letter-spacing: 0em;
+	line-height: 1.5;
+}
+
 .p-logo__wrap {
 	position: relative;
 	text-align: center;
@@ -271,7 +325,7 @@ body li {
 .p-news__wrap {
 	margin: 0 auto;
 	max-width: 639px;
-	padding-top: 64px;
+	padding-top: 74px;
 	width: 639px;
 }
 
