--- a/開発用/src/assets/sass/component/_index.scss
+++ b/開発用/src/assets/sass/component/_index.scss
@@ -7,3 +7,8 @@
 @use "./c-logo";
 @use "c-main-message";
 @use "c-concept__lead";
+@use "c-section__title";
+@use "c-news__date";
+@use "c-news__label";
+@use "c-news__item";
+@use "c-news__content";
