トップページの温泉、料理、客室のHTML,cssの大枠作成

--- a/開発用/src/assets/sass/component/_index.scss
+++ b/開発用/src/assets/sass/component/_index.scss
@@ -12,3 +12,12 @@
 @use "c-news__label";
 @use "c-news__item";
 @use "c-news__content";
+@use "c-content__img";
+@use "c-content__title";
+@use "c-content__lead";
+@use "c-content__desc";
+@use "c-content__link";
+@use "c-content__title--vertical";
+@use "c-content__img--cooking";
+@use "c-content__img--guestroom";
+@use "c-content__link--cooking";
