--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -166,6 +166,10 @@ body li {
 	text-align: center;
 }
 
+.c-main-message__text {
+	margin-inline: auto;
+	max-width: 583px;
+}
 
 .c-concept__lead {
 	color: #2D2D2E;
@@ -229,6 +233,163 @@ body li {
 	font-weight: 400;
 	letter-spacing: 0em;
 	line-height: 1.5;
+}
+
+.c-content__img {
+	background: url(../img/top/top1.png) center center/contain no-repeat;
+	background-size: cover;
+	height: auto;
+	padding-top: 35.96%;
+	position: relative;
+	width: 66.25%;
+}
+
+.c-content__title {
+	color: #ffffff;
+	font-size: 2.5rem;
+	font-size: calc(24px + 16 * (100vw - 375px) / 1065);
+	font-weight: 400;
+	left: 50%;
+	left: 50%;
+	letter-spacing: 0.13em;
+	line-height: 2.023;
+	position: absolute;
+	top: 50%;
+	transform: translateX(-50%);
+	transform: translateY(-50%);
+}
+
+.c-content__lead {
+	color: #2D2D2E;
+	font-family: "Shippori Mincho", serif;
+	font-size: 1.5rem;
+	font-size: calc(18px + 6 * (100vw - 375px) / 1065);
+	font-weight: 400;
+	letter-spacing: 0.13em;
+	line-height: 1.8979166667;
+	position: relative;
+}
+
+.c-content__lead::after {
+	background: #A6A6A6;
+	content: "";
+	height: 0.5px;
+	left: 70px;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 138.67px;
+}
+
+.c-content__desc {
+	color: #2D2D2E;
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 0.9375rem;
+	font-weight: 400;
+	letter-spacing: 0.13em;
+	line-height: 2.0233333333;
+	padding-top: 20px;
+}
+
+.c-content__link {
+	color: #2D2D2E;
+	display: block;
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 0.875rem;
+	font-weight: 400;
+	letter-spacing: 0.13em;
+	line-height: 2.0228571429;
+	margin: 0 auto;
+	padding-top: 80px;
+	position: relative;
+	text-align: center;
+	transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+	width: 87.84%;
+}
+
+.c-content__link::before {
+	background: #2D2D2E;
+	bottom: -15px;
+	content: "";
+	height: 0.5px;
+	left: 5px;
+	max-width: 238.89px;
+	position: absolute;
+	transition: all 0.3s;
+	width: 87.84%;
+}
+
+.c-content__link::after {
+	background: #2D2D2E;
+	bottom: -5px;
+	content: "";
+	height: 0.5px;
+	position: absolute;
+	right: 15px;
+	transform: rotate(43deg);
+	transition: all 0.3s;
+	width: 29.24px;
+}
+
+.c-content__link:hover::before {
+	left: 10%;
+}
+
+.c-content__link:hover::after {
+	right: -0.5%;
+}
+
+.c-content__link:hover {
+	opacity: 0.7;
+}
+
+.c-content__title--vertical {
+	text-align: center;
+	transform: translateX(-50%) translateY(-50%);
+	writing-mode: vertical-rl;
+}
+
+.c-content__img--cooking {
+	background: url(../img/top/top2.png) center center/contain no-repeat;
+	background-size: cover;
+	width: 61.39%;
+}
+
+.c-content__img--guestroom {
+	background: url(../img/top/top3.png) center center/contain no-repeat;
+	background-size: cover;
+}
+
+.c-content__link--cooking::before {
+	background: #2D2D2E;
+	bottom: -15px;
+	content: "";
+	height: 0.5px;
+	left: 5px;
+	max-width: 255px;
+	position: absolute;
+	transition: all 0.3s;
+	width: 100%;
+}
+
+.c-content__link--cooking::after {
+	background: #2D2D2E;
+	bottom: -5px;
+	content: "";
+	height: 0.5px;
+	position: absolute;
+	right: -9px;
+	transform: rotate(43deg);
+	transition: all 0.3s;
+	width: 29.24px;
+}
+
+.c-content__link--cooking:hover::before {
+	left: 10%;
+}
+
+.c-content__link--cooking:hover::after {
+	right: -12%;
 }
 
 .p-logo__wrap {
@@ -326,25 +487,24 @@ body li {
 
 .p-news__wrap {
 	margin: 0 auto;
-	max-width: 639px;
 	padding-top: 74px;
-	width: 639px;
+	width: 44.38%;
 }
 
-.p-spend-message {
-	font-size: 15px;
-	letter-spacing: 1.95px;
-	line-height: 2.303;
-	padding-bottom: 110px;
-	padding-top: 120px;
-	text-align: center;
+.p-content {
+	padding-bottom: 122px;
+	position: relative;
 }
 
-
-.c-main-message__text {
-
-	margin-inline: auto;
-	max-width: 583px;
+.p-content::before {
+	background: url(../img/top/section_bg.png) center center/contain no-repeat;
+	background-size: cover;
+	content: "";
+	height: 91%;
+	position: absolute;
+	right: 0;
+	top: 128px;
+	width: 74.65%;
 }
 
 .spend-wrapper {
@@ -616,10 +776,44 @@ body li {
 	display: none;
 }
 
+.p-content__block {
+	display: flex;
+}
+
+.p-content__block:not(:first-child) {
+	padding-top: 117px;
+}
+
+.p-content__text {
+	max-width: 272px;
+	padding-left: 33px;
+	padding-top: 153px;
+	z-index: 1;
+}
+
+.p-content__cooking {
+	gap: 8.2%;
+	justify-content: end;
+}
+
+.p-content__text--guestroom {
+	margin: 0 auto;
+	padding-left: 0;
+}
+
+.p-content__text--cooking {
+	max-width: 255px;
+	padding-left: 0;
+}
+
 @media (min-width: 768px) and (max-width: 1280px) {
 
 .p-news__wrap {
 	width: 639px;
+}
+
+.p-content__text {
+	width: 33%;
 }
 
 }
@@ -646,8 +840,38 @@ body li {
 	display: none;
 }
 
+.c-content__img {
+	margin: 0 auto;
+	padding-top: 51%;
+	width: 89.3%;
+}
+
+.c-content__title {
+	font-size: 1.5rem;
+	font-weight: 400;
+	letter-spacing: 0.13em;
+	line-height: 2.0229166667;
+}
+
+.p-news {
+	padding-bottom: 60px;
+}
+
 .p-news__wrap {
 	width: 89.3%;
+}
+
+.p-content::before {
+	top: 0;
+	width: 100%;
+}
+
+.p-content__wrap {
+	padding-top: 15px;
+}
+
+.p-content__text {
+	display: none;
 }
 
 }
