--- a/開発用/src/assets/sass/global/_variables.scss
+++ b/開発用/src/assets/sass/global/_variables.scss
@@ -13,7 +13,7 @@ $pagination-active-color:#6C6A6A;
 $label-color:#CA1818;
 $sub-text-color:#181818;
 $border-bottom-color:#0A0A0A;
-
+$border-accent-color:#A6A6A6;
 
 /////////フォント/////////
 $main-font: "Zen Kaku Gothic New", sans-serif;
