--- a/開発用/src/assets/sass/component/_c-content__link.scss
+++ b/開発用/src/assets/sass/component/_c-content__link.scss
@@ -5,6 +5,7 @@
   color: global.$text-color;
   font-family: global.$main-font;
   padding-top: 80px;
+  padding-left: 2px;
   position: relative;
   transition: all .3s cubic-bezier(.4,0,.2,1);
   display: block;
@@ -15,11 +16,12 @@
   &::before {
     content: '';
     position: absolute;
-    bottom: -15px;
+    bottom: -14px;
     left: 5px;
     height: 0.5px;
     width: 87.84%;
     max-width: 238.89px;
+    width: 238.93px;
     background: global.$text-color;
     transition: all .3s;
   }
@@ -28,7 +30,7 @@
     content: '';
     position: absolute;
     bottom: -5px;
-    right: 15px;
+    right: -17px;
     width: 29.24px;
     height: 0.5px;
     background: global.$text-color;
