--- a/開発用/src/assets/sass/project/_p-slider.scss
+++ b/開発用/src/assets/sass/project/_p-slider.scss
@@ -1,16 +1,12 @@
 @use "../global/" as global;
 
-/* ページネーションの余白 */
-.p-slider .swiper-pagination-bullet {
-  margin: 0 7.5px;
-}
 
-/* ページネーションのサイズと色 */
 .p-slider .swiper-pagination-bullet {
   background-color: global.$pagination-color;
   opacity: 1;
-  height: 10px;
-  width: 10px;
+  height: 5px;
+  width: 5px;
+  margin: 5px 3px!important;  
 }
 
 .p-slider .swiper-pagination-bullet-active {
@@ -46,7 +42,7 @@
 
 .p-slider__img--wrap {
   position: relative;
-  aspect-ratio: 896/758;
+  aspect-ratio: 892/758;
   transition: transform 1s;
 }
 
