--- a/開発用/src/assets/sass/component/_c-section__title.scss
+++ b/開発用/src/assets/sass/component/_c-section__title.scss
@@ -6,4 +6,5 @@ font-family: global.$title-font;
 font-size: calc(24px + (32 - 24) * ((100vw - 375px)) / (1440 - 375));
 text-align: center;
 color: global.$text-color;
+padding-left: 8px;
 }
