--- a/開発用/src/assets/sass/project/_p-mv__title.scss
+++ b/開発用/src/assets/sass/project/_p-mv__title.scss
@@ -3,5 +3,6 @@
 @include global.font(48, 300, 69.5, 6.24);
 font-family: global.$main-font;
 color: global.$white-color;
-
+position: relative;
+left: 3px;
 }
